# VirtuaMate

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Kconfig  README.md
.github/workflows/: check-build.yml  release.yml
IM/: im_config.h
agent/: agent_loop.c  context_builder.c
ai_components/ai_skills/src/: ai_skill.c
cmake/: vrm_linux_deps.cmake
config/: DshanPi_A1.config  RaspberryPi.config  TaishanPi_3.config  Ubuntu.config
heartbeat/: heartbeat.c  heartbeat.h
include/: app_base_config.h  tuya_app_config.h  tuya_app_config_secrets.h.example  tuyaopen_claw_chat.h
memory/: memory_manager.c  memory_manager.h  session_manager.c  session_manager.h
overlay/ai_components/ai_agent/include/: ai_agent.h
overlay/ai_components/ai_agent/src/: ai_agent.c
overlay/ai_components/ai_skills/src/: ai_skill.c
overlay/ai_components/utility/include/: ai_user_event.h
scripts/: build_third_party_linux_aarch64.sh  build_third_party_linux_x86_64.sh
skills/: skill_loader.c  skill_loader.h
src/: app_avatar_mcp.c  app_cli_cmd.c  ducky_claw_chat.c  tuya_app_main.c  tuyaopen_claw_chat.c
src/vrm/: lip_sync.c  vrm_bg2d.h  vrm_emotion.h  vrm_emotion_timeline.c  vrm_emotion_timeline.h  vrm_lip_sync.h  vrm_loader.h  vrm_mem.h  vrm_overlay.h  vrm_renderer.h  vrm_skybox.h  vrm_spring_bone.h  vrm_text_emotion.h  vrm_text_timeline.c  vrm_text_timeline.h
src/vrm/emotion/: emotion.c  text_emotion.c
src/vrm/loader/: vrm_loader.c  vrm_loader_anim_eval.c  vrm_loader_anim_extract.c  vrm_loader_constraint.c  vrm_loader_expression.c  vrm_loader_glb_json.c  vrm_loader_glb_json.h  vrm_loader_gltf_tex.c  vrm_loader_humanoid.c  vrm_loader_internal.h  vrm_loader_math.c  vrm_loader_mesh.c  vrm_loader_mtoon.c  vrm_loader_spring_parse.c  vrm_loader_texture.c  vrm_loader_vrma.c
src/vrm/overlay/: overlay_draw.c  overlay_font.c  overlay_internal.h  overlay_panel.c  overlay_state.c  settings_overlay.c
src/vrm/renderer/: gl_renderer.c  gl_renderer_api.c  gl_renderer_idle.c  gl_renderer_internal.h  gl_renderer_scene.c  gl_renderer_shaders.c  mtoon_draw.c  mtoon_draw.h  mtoon_outline.c  mtoon_outline.h  mtoon_shaders.c  mtoon_shaders.h
src/vrm/scene/: bg2d.c  skybox.c
src/vrm/spring_bone/: spring_bone.c
tools/: tool_avatar.c  tool_avatar.h  tools_register.c
